--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -240,3 +240,20 @@
   year={2018},
   publisher={Wiley Online Library}
 }
+
+# Pregnancy Childbirth Trauma Question
+
+@article{saxbe_birth_2018,
+	title = {The {Birth} {Experiences} {Questionnaire}: {A} brief measure assessing psychosocial dimensions of childbirth.},
+	volume = {32},
+	issn = {1939-1293, 0893-3200},
+	shorttitle = {The {Birth} {Experiences} {Questionnaire}},
+	language = {en},
+	number = {2},
+	urldate = {2023-09-12},
+	journal = {Journal of Family Psychology},
+	author = {Saxbe, Darby and Horton, Katelyn Taline and Tsai, Ann Bryna},
+	month = mar,
+	year = {2018},
+	pages = {262--268}
+}
